Bring back old things???

--- a/ui/app/styles/components/global-search-dropdown.scss
+++ b/ui/app/styles/components/global-search-dropdown.scss
@@ -42,6 +42,10 @@
         background: transparentize($blue, 0.8);
         color: $blue;
       }
+
+      .highlighted {
+        font-weight: $weight-semibold;
+      }
     }
   }
 
